// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can display total of multiple expenses 1`] = `
<h1>
  Viewing 3 expenses totalling $1,141.95
</h1>
`;

exports[`can display total of one expense 1`] = `
<h1>
  Viewing 1 expense totalling $1.95
</h1>
`;
